Update Reading List section when adding suggestion

When the user long press a suggestion and add it to the Reading List,
the Reading List section of the ContentSuggestions must be reloaded.

Bug: 756779
Change-Id: I6e4b7bb4e46dd3064d6f9e3c043764c1521fca1d
Reviewed-on: https://chromium-review.googlesource.com/621047
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495915}
Former-commit-id: 2b199f14b2b33a5a61768e2a43533af17176143f